<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue"
    android:padding="15dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Num_0"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/backspace_2"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintVertical_weight="1"

        >

    </TextView>

    <TextView
        android:id="@+id/calculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main">

    </TextView>

    <Button
        android:id="@+id/backspace"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintEnd_toStartOf="@id/zero"
        app:layout_constraintStart_toStartOf="@id/main">

    </Button>

    <Button
        android:id="@+id/zero"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Num_0"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintEnd_toStartOf="@+id/dot_button"
        app:layout_constraintStart_toEndOf="@id/backspace">


    </Button>

    <Button
        android:id="@+id/dot_button"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintEnd_toStartOf="@+id/equals_button"
        app:layout_constraintStart_toEndOf="@id/zero">

    </Button>

    <Button
        android:id="@+id/equals_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toEndOf="@id/dot_button">

    </Button>

    <Button
        android:id="@+id/one"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_1"
        app:layout_constraintBottom_toTopOf="@+id/backspace"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintStart_toStartOf="@id/main">

    </Button>

    <Button
        android:id="@+id/two"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_2"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/one">

    </Button>

    <Button
        android:id="@+id/three"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_3"
        app:layout_constraintBottom_toTopOf="@+id/dot_button"
        app:layout_constraintEnd_toStartOf="@+id/sum_button"
        app:layout_constraintStart_toEndOf="@id/two">

    </Button>

    <Button
        android:id="@+id/sum_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/sum"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toEndOf="@id/three">

    </Button>

    <Button
        android:id="@+id/four"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_4"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintStart_toStartOf="@id/main">

    </Button>

    <Button
        android:id="@+id/five"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_5"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/one">

    </Button>

    <Button
        android:id="@+id/six"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_6"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/sum_button"
        app:layout_constraintStart_toEndOf="@id/two">

    </Button>

    <Button
        android:id="@+id/minus_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/minus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sum_button"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toEndOf="@id/three">

    </Button>

    <Button
        android:id="@+id/seven"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_7"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintStart_toStartOf="@id/main">

    </Button>

    <Button
        android:id="@+id/eight"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_8"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/one">

    </Button>

    <Button
        android:id="@+id/nine"
        style="@style/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Num_9"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/sum_button"
        app:layout_constraintStart_toEndOf="@id/two">

    </Button>

    <Button
        android:id="@+id/multiplication_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/minus_button"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toEndOf="@id/three">

    </Button>

    <Button
        android:id="@+id/ac_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/ac"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/backspace_2"
        app:layout_constraintStart_toStartOf="@id/main">

    </Button>

    <Button
        android:id="@+id/backspace_2"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintEnd_toStartOf="@id/percent_button"
        app:layout_constraintStart_toEndOf="@id/ac_button">

    </Button>

    <Button
        android:id="@+id/percent_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/percentage"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintEnd_toStartOf="@id/division_button"
        app:layout_constraintStart_toEndOf="@id/backspace_2">

    </Button>

    <Button
        android:id="@+id/division_button"
        style="@style/Button_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/division"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/multiplication_button"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toEndOf="@id/percent_button">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>